bk_ida/gobmkida/g2/do_atari_atari
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_atari_atari/src/engine/combination.c:1191:13: error: expected expression
aa_status = ::aa_status[v35 + 21 + v36]; 
            ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_atari_atari/src/engine/combination.c:1265:1: error: use of undeclared identifier 'current_minsize'
current_minsize = minsize; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_atari_atari/src/engine/combination.c:1266:46: error: use of undeclared identifier 'conditional_attack_point'
memset( conditional_attack_point, 0, sizeof( conditional_attack_point)); 
                                             ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_atari_atari/src/engine/combination.c:1266:9: error: use of undeclared identifier 'conditional_attack_point'
memset( conditional_attack_point, 0, sizeof( conditional_attack_point)); 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_atari_atari/src/engine/combination.c:1267:1: error: use of undeclared identifier 'current_attacks'
current_attacks = attacks; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_atari_atari/src/engine/combination.c:1295:29: error: use of undeclared identifier 'target_comp_func'
gg_sort( target, v17, 4uLL, target_comp_func); 
                            ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_atari_atari/src/engine/combination.c:1298:33: error: use of undeclared identifier 'move_comp_func'
gg_sort( attacks, v16, 0x14uLL, move_comp_func); 
                                ^
7 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_atari_atari/src/obj/1/combination.o] Error 1
